WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196408
[ContentChangeObserver] Subframe load should not reset content observation on the mainframe
https://bugs.webkit.org/show_bug.cgi?id=196408
Summary
[ContentChangeObserver] Subframe load should not reset content observation on...
alan
Reported
2019-03-29 15:08:31 PDT
ssia
Attachments
Patch
(5.29 KB, text/plain)
2019-03-29 15:23 PDT
,
alan
no flags
Details
Patch
(5.35 KB, patch)
2019-03-29 16:07 PDT
,
alan
simon.fraser
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews114 for mac-highsierra
(2.46 MB, application/zip)
2019-03-29 18:02 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-29 15:11:14 PDT
<
rdar://problem/49436797
>
alan
Comment 2
2019-03-29 15:23:24 PDT
Created
attachment 366312
[details]
Patch
alan
Comment 3
2019-03-29 16:07:07 PDT
Created
attachment 366318
[details]
Patch
EWS Watchlist
Comment 4
2019-03-29 18:02:29 PDT
Comment on
attachment 366318
[details]
Patch
Attachment 366318
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/11707786
New failing tests: jquery/offset.html
EWS Watchlist
Comment 5
2019-03-29 18:02:31 PDT
Created
attachment 366337
[details]
Archive of layout-test-results from ews114 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-highsierra Platform: Mac OS X 10.13.6
alan
Comment 6
2019-03-30 06:47:47 PDT
Committed
r243677
: <
https://trac.webkit.org/changeset/243677
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug