[ContentChangeObserver] Subframe load should not reset content observation on the mainframe https://bugs.webkit.org/show_bug.cgi?id=196408 <rdar://problem/49436797>

Reviewed by Simon Fraser.

Source/WebKit:

Hover intent fails when an unrelated frame commits a load the same time.
cancelPotentialTapInFrame is called from didCommitLoad, but what we are looking for here is the user initiated cancel of a tap (cancelPotentialTap).
(If the current frame navigates away, willDetachPage takes care of canceling the observation.)

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::cancelPotentialTap):
(WebKit::WebPage::cancelPotentialTapInFrame):

LayoutTests:

* fast/events/touch/ios/content-observation/hover-while-loading-subframe-expected.txt: Added.
* fast/events/touch/ios/content-observation/hover-while-loading-subframe.html: Added.

Canonical link: https://commits.webkit.org/210693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243677 268f45cc-cd09-0410-ab3c-d52691b4dbfc